# oxinfer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  manifest_creator_catalog.json  manifest_creator_catalog_simple.json  manifest_creator_catalog_with_scopes.json  manifest_creator_relative.json  manifest_test_poly.json  test_runner.sh
.github/workflows/: ci.yml  release.yml
.oxinfer/: README.md
cmd/bench/: main.go
cmd/oxinfer/: main.go  main_test.go  request_mode_test.go
cmd/sprint3-validation/: main.go
docs/: analysis-contract-v1.md  analysis-contract-v2.md  diagnostic-codes-v1.json  diagnostic-codes-v2.json  release.md  smart-examples-metadata.md
fixtures/: api.manifest.json  complex.manifest.json  minimal.manifest.json
schemas/: analysis-request-v1.schema.json  analysis-request-v2.schema.json  analysis-response-v1.schema.json  analysis-response-v2.schema.json  delta.schema.json  embed.go  manifest.schema.json
scripts/: cache-bench.ps1  check_public_docs.py  check_release_workflow_runtime.py  dev.ps1
src/: cache.rs  contract_authorization.rs  contract_error_responses.rs  contract_inertia.rs  contract_query_builder.rs  contracts.rs  discovery.rs  lib.rs  main.rs  manifest.rs  matchers.rs  model.rs  output.rs  parser.rs  pipeline.rs  routes.rs  source_index.rs
tests/: cli_smoke.rs  fixture_smoke.rs  oxcribe_fixture_support.rs  request_mode_auth_error.rs  request_mode_inertia.rs  request_mode_policy.rs  request_mode_smoke.rs  request_mode_spatie.rs  routes_smoke.rs
(+350 files in other folders)
