[package]
name = "oxinfer"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tree-sitter = "0.20"
tree-sitter-php = "0.20"
walkdir = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
